# brSkinBrush

./: CMakeLists.txt  LICENSE.txt  functions.cpp  functions.h  mayaConfigure.bat  meson.build  pluginMain.cpp  quick_compile.bat  skinBrushCmd.cpp  skinBrushContext.cpp  skinBrushContextSetFlags.cpp  skinBrushFlags.h  skinBrushLegacy.cpp  skinBrushTool.cpp  skinBrushTool.h
moduleData/icons/: transferFiles.py
moduleData/scripts/: brSkinBrushCreateMenuItems.mel  brSkinBrushInfluenceList.mel  brSkinBrushProperties.mel  brSkinBrushToolCtx.mel  brSkinBrushValues.mel  brSkinBrush_pythonFunctions.py  catchEventsUI.py  userSetup.py
modules/: brSkinBrush.mod
modules/brSkinBrush/plug-ins/win64/2018/: brSkinBrush.mll
modules/brSkinBrush/plug-ins/win64/2019/: brSkinBrush.mll
modules/brSkinBrush/plug-ins/win64/2020/: brSkinBrush.mll
modules/brSkinBrush/scripts/: brSkinBrushInfluenceList.mel  brSkinBrushProperties.mel  brSkinBrushProperties.res.mel  brSkinBrushToolCtx.mel  brSkinBrushValues.mel  brSkinBrush_pythonFunctions.py  catchEventsUI.py  userSetup.py
scripts/: buildModFile.py
scripts/scripts/: brSkinBrushInfluenceList.mel  brSkinBrushProperties.mel  brSkinBrushProperties.res.mel  brSkinBrushShowInViewMessage.mel  brSkinBrushValues.mel  brSkinBrush_pythonFunctions.py
src/: enums.h  functions.cpp  functions.h  pluginMain.cpp  setOverloads.h  skinBrushCmd.cpp  skinBrushContext.cpp  skinBrushContextSetFlags.cpp  skinBrushFlags.h  skinBrushLegacy.cpp  skinBrushTool.cpp  skinBrushTool.h
subprojects/maya/: meson.build
